--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ APP_SECRET=8fa613af0387f55da5f10b2abfb8aa69
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://postgres:root@127.0.0.1:5432/postgres?serverVersion=16&charset=utf8"
+DATABASE_PASSWORD="root"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
